--- a/320_FInal_Project.ipynb
+++ b/320_FInal_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -26,76 +26,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A'Hearn, Michael F.</th>\n",
-       "      <th>CMNS-Astronomy</th>\n",
-       "      <th>Res Prof</th>\n",
-       "      <th>$135,810.69</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Aarhus, William H</td>\n",
-       "      <td>SVPAAP-Teaching and Learning Transformation Ce...</td>\n",
-       "      <td>Manager</td>\n",
-       "      <td>$75,750.00</td>\n",
+       "      <td>A'Hearn, Michael F.</td>\n",
+       "      <td>CMNS-Astronomy</td>\n",
+       "      <td>Res Prof</td>\n",
+       "      <td>$155,925.01</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Abadinsky, Alisa Michelle</td>\n",
-       "      <td>VPAF-Comptroller</td>\n",
-       "      <td>Bursar</td>\n",
-       "      <td>$140,000.00</td>\n",
+       "      <td>Aarhus, William H</td>\n",
+       "      <td>SVPAAP-Teaching and Learning Transformation Ce...</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>$75,000.00</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Abadir, Miranda</td>\n",
        "      <td>ARHU-National Foreign Language Center</td>\n",
        "      <td>Fac Res Asst</td>\n",
-       "      <td>$80,780.64</td>\n",
+       "      <td>$78,810.37</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Abarca, Francisco A</td>\n",
-       "      <td>VPAF-FM-B&amp;LM-Building &amp; Landscape Maintenance-...</td>\n",
-       "      <td>Housekeeper</td>\n",
-       "      <td>$23,826.00</td>\n",
+       "      <td>Abasi, Ali Reza</td>\n",
+       "      <td>ARHU-School of Languages, Literatures, and Cul...</td>\n",
+       "      <td>Assoc Prof</td>\n",
+       "      <td>$75,005.26</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Abarcar, Arri J</td>\n",
-       "      <td>BSOS-College of Behavioral &amp; Social Sciences</td>\n",
-       "      <td>Accounting Assoc</td>\n",
-       "      <td>$40,600.00</td>\n",
+       "      <td>Abban, Kofi</td>\n",
+       "      <td>VPSA-Transportation Services</td>\n",
+       "      <td>MT Maint Aide II</td>\n",
+       "      <td>$29,065.00</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         A'Hearn, Michael F.  \\\n",
-       "0          Aarhus, William H   \n",
-       "1  Abadinsky, Alisa Michelle   \n",
-       "2            Abadir, Miranda   \n",
-       "3        Abarca, Francisco A   \n",
-       "4            Abarcar, Arri J   \n",
+       "                  Name                                         Department  \\\n",
+       "0  A'Hearn, Michael F.                                     CMNS-Astronomy   \n",
+       "1    Aarhus, William H  SVPAAP-Teaching and Learning Transformation Ce...   \n",
+       "2      Abadir, Miranda              ARHU-National Foreign Language Center   \n",
+       "3      Abasi, Ali Reza  ARHU-School of Languages, Literatures, and Cul...   \n",
+       "4          Abban, Kofi                       VPSA-Transportation Services   \n",
        "\n",
-       "                                      CMNS-Astronomy          Res Prof  \\\n",
-       "0  SVPAAP-Teaching and Learning Transformation Ce...           Manager   \n",
-       "1                                   VPAF-Comptroller            Bursar   \n",
-       "2              ARHU-National Foreign Language Center      Fac Res Asst   \n",
-       "3  VPAF-FM-B&LM-Building & Landscape Maintenance-...       Housekeeper   \n",
-       "4       BSOS-College of Behavioral & Social Sciences  Accounting Assoc   \n",
-       "\n",
-       "   $135,810.69  \n",
-       "0   $75,750.00  \n",
-       "1  $140,000.00  \n",
-       "2   $80,780.64  \n",
-       "3   $23,826.00  \n",
-       "4   $40,600.00  "
+       "              Title        Salary  Year  \n",
+       "0          Res Prof  $155,925.01   2016  \n",
+       "1           Manager   $75,000.00   2016  \n",
+       "2      Fac Res Asst   $78,810.37   2016  \n",
+       "3        Assoc Prof   $75,005.26   2016  \n",
+       "4  MT Maint Aide II   $29,065.00   2016  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,8 +102,18 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_csv(\"2017_data.csv\")\n",
-    "data.head()"
+    "_2017_data = pd.read_csv(\"2017_data.csv\")\n",
+    "_2017_data[\"Year\"] = \"2017\"\n",
+    "_2016_data = pd.read_csv(\"2016_data.csv\")\n",
+    "_2016_data[\"Year\"] = \"2016\"\n",
+    "_2015_data = pd.read_csv(\"2015_data.csv\")\n",
+    "_2015_data[\"Year\"] = \"2015\"\n",
+    "_2014_data = pd.read_csv(\"2014_data.csv\")\n",
+    "_2014_data[\"Year\"] = \"2014\"\n",
+    "_2013_data = pd.read_csv(\"2013_data.csv\")\n",
+    "_2013_data[\"Year\"] = \"2013\"\n",
+    "\n",
+    "_2016_data.head()\n"
    ]
   },
   {
