some more writeup ish

--- a/320_FInal_Project.ipynb
+++ b/320_FInal_Project.ipynb
@@ -17,6 +17,7 @@
     "3. [Scraping](#scrape)\n",
     "4. [Tidying](#tidy)\n",
     "5. [Exploratory Data Analysis and Data Visualization](#eda)\n",
+    "6. [Hypothesis Testing and Analysis](#hypothesis)\n",
     "6. [Conclusion](#conclusion)\n",
     "7. [Future Work](#future)\n",
     "8. [References](#references)"
@@ -56,8 +57,9 @@
    "metadata": {},
    "source": [
     "## 2. About the Data\n",
-    "The first step \n",
-    "\n"
+    "The first step to data analysis is to choose and obtain a dataset. In our case, this is __[UMD Salary Data from the Diamondback](http://salaryguide.diamondbacklab.com/)__. They state on their website, \"Each year, the university provides this public data to The Diamondback in a basic Excel spreadsheet.\" However, we received no reponse to our multiple requests for these spreadsheets, which was even more surprising as this data is public information. Thus, we had no choice but to scrape the salary data from their website. If you are interested in how we scraped this data, we will explain this process in the next section. On the other hand, if you are not too interested in the scraping process, that is okay too since we've scraped the yearly data into csv files for you! You can access the scraped data from __[our repository](https://github.com/rosegaray/UMDSalaryGuideData)__ and skip the next section.\n",
+    "\n",
+    "Note: Another dataset we could have used comes from the __[Baltimore Sun](http://www.baltimoresun.com/news/data/bal-public-salaries-archive-20150415-htmlstory.html)__, who publish salary data from the entire state of Maryland. However, we decided to use the data from the Diamondback because we want to focus on UMD and the information in their salary guides are a bit more specific, as it includes both the school and department that a UMD employee belongs to."
    ]
   },
   {
@@ -82,21 +84,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 720,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-720-5d072e95017c>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-720-5d072e95017c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <a id='tidy></a>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "<a id='tidy></a>"
+    "<a id='tidy'></a>"
    ]
   },
   {
@@ -120,10 +111,8 @@
     "import plotly \n",
     "plotly.tools.set_credentials_file(username='achang96', api_key='MuchOgtjBpKostjwu4RF')\n",
     "\n",
-    "\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
-    "\n",
     "import seaborn as sns"
    ]
   },
@@ -1840,10 +1829,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 755,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to similarly wrangle the data for years 2013-2016. \n",
+    "# Could have just used this function for 2017 as well, but wanted to walk you through the steps above :)\n",
     "def wrangle(year): \n",
     "    csv = str(year) + \"_data.csv\"\n",
     "    df = pd.read_csv(csv)\n",
@@ -3746,6 +3737,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='hypothesis'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Hypothesis Testing and Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='conclusion'></a>"
    ]
   },
@@ -3753,7 +3776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Conclusion"
+    "## 7. Conclusion"
    ]
   },
   {
@@ -3767,7 +3790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Future Work"
+    "## 8. Future Work"
    ]
   },
   {
@@ -3781,7 +3804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. References\n",
+    "## 9. References\n",
     "#### Setup\n",
     "-  Github Cheat Sheet (versioning): https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf\n",
     "-  Anaconda (package management): https://docs.anaconda.com/\n",
