--- a/320_FInal_Project.ipynb
+++ b/320_FInal_Project.ipynb
@@ -3117,7 +3117,7 @@
    "source": [
     "Congratulations on making it to the end of the tutorial! If you have any questions, comments, or concerns, please feel free to reach out to us. Happy data exploring!\n",
     "-  Rose Garay: \n",
-    "-  Carolyn Chen: \n",
+    "-  Carolyn Chen: hchen117@terpmail.umd.edu\n",
     "-  Ashley Chang: achang96@umd.edu"
    ]
   },
