--- a/320_FInal_Project.ipynb
+++ b/320_FInal_Project.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1>UMD Salary Guide Data</h1>\n",
     "<p>CMSC320 Final Tutorial</p>\n",
-    "<p><i>By: Rose Garay, Carolyn Chen, Ashley Chang</i></p>"
+    "<p><i>By: Rose Garay, Hsin (Carolyn) Chen, Ashley Chang</i></p>"
    ]
   },
   {
@@ -3116,8 +3116,8 @@
    "metadata": {},
    "source": [
     "Congratulations on making it to the end of the tutorial! If you have any questions, comments, or concerns, please feel free to reach out to us. Happy data exploring!\n",
-    "-  Rose Garay: \n",
-    "-  Carolyn Chen: hchen117@terpmail.umd.edu\n",
+    "-  Rose Garay: rosana.garay@gmail.com\n",
+    "-  Hsin (Carolyn) Chen: hchen117@terpmail.umd.edu\n",
     "-  Ashley Chang: achang96@umd.edu"
    ]
   },
